# riscv-c

./: .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json
cmake/: config.h.cmake-in
modules/riscv/: CMakeLists.txt
modules/riscv/include/riscv/: register32.h  rvi32_system.h  state.h  state.inc
modules/riscv/include/riscv/pipeline/: decoded_values.h  execute.h  instruction_decode.h  instruction_fetch.h  pipeline_stage.h
modules/riscv/include/riscv/support/: container_of.h  masks.h  primitive_bufs.h
modules/riscv/include/riscv/system_interface/: memory_map.h  memory_map.inc  mmio_device.h  ram_device.h  rom_device.h  system_interface.h
modules/riscv/src/: main.c  register32.c  rvi32_system.c
modules/riscv/src/pipeline/: execute.c  instruction_decode.c  instruction_fetch.c  pipeline_stage.c
modules/riscv/src/system_interface/: mmio_device.c  ram_device.c  rom_device.c  system_interface.c
